# Runoff

./: README.md  meson.build  net.winscloud.Runoff.json
data/: meson.build  net.winscloud.Runoff.desktop.in  net.winscloud.Runoff.gschema.xml  net.winscloud.Runoff.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  runoff-application.c  runoff-application.h  runoff-window.c  runoff-window.h  runoff-window.ui  runoff.gresource.xml
